// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImpactInfo /> should render properly loading state 1`] = `
<div>
  <h1
    class="css-1c2npbj"
  >
    Loading...
  </h1>
</div>
`;

exports[`<ImpactInfo /> should render properly with data 1`] = `
<div>
  <h1
    class="css-1c2npbj"
  >
    Text with value 15
     
  </h1>
</div>
`;
